# TicTacToeBackend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: requirements.txt  settings.py
nginx/: Dockerfile  default.conf  ssl.conf
reverse_proxy/: Dockerfile  default.conf  ssl.conf
